# EvoChess

./: .gitignore  lichess_file_download.py  play_model.py  requirements.txt  train_model.py
pipelines/: README.md  pyproject.toml
pipelines/pipelines/: assets.py  definitions.py  resources.py
